--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@clerk/elements": "^0.22.23",
     "@clerk/nextjs": "^6.11.3",
+    "@esbuild-kit/core-utils": "^3.3.2",
+    "@esbuild-kit/esm-loader": "^2.6.5",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
+    "esbuild": "^0.25.0",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "pg": "^8.13.1",
@@ -38,5 +42,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "esbuild": "^0.25.0"
   }
 }
