--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
     "esbuild": "^0.25.0",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.7",
     "next": "^15.1.6",
     "pg": "^8.13.1",
     "react": "^19.0.0-rc.1",
